@@ -3,7 +3,14 @@ Lucene contrib change Log
 ======================= 2.9 Branch (not yet released) =======================
 
 Changes in backwards compatibility policy
-   
+
+Changes in runtime behavior
+
+ * LUCENE-1963: ArabicAnalyzer now lowercases before checking the stopword
+   list. This has no effect on Arabic text, but if you are using a custom
+   stopword list that contains some non-Arabic words, you'll need to fully
+   reindex.  (DM Smith via Robert Muir)
+      
 Bug fixes
 
  * LUCENE-1953: FastVectorHighlighter: small fragCharSize can cause
